--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
 		"nette/di": "^3.0",
 		"nette/utils": "^2.4 || ^3.0",
 		"doctrine/annotations": "~1.6",
-		"kdyby/doctrine-cache": "^3.0"
+		"dek-cz/doctrine-cache": "^3.1.2"
 	},
 	"require-dev": {
 		"nette/bootstrap": "^3.0",
